# package-manager

./: CMakeLists.txt  Package.code
BuildSupport/CodiraSyntax/: CMakeLists.txt
Sources/: CMakeLists.txt
Sources/AppleProductTypes/: Product.code
Sources/Basics/: ArrayHelpers.code  AuthorizationProvider.code  CMakeLists.txt  Cancellator.code  CodiraVersion.code  DispatchTimeInterval+Extensions.code  Errors.code  ImportScanning.code  JSON+Extensions.code  JSONDecoder+Extensions.code  Netrc.code  OSSignpost.code  Observability.code  Process.code  SQLite.code  SQLiteBackedCache.code  Sandbox.code  SendableTimeInterval.code  SourceControlURL.code  TestingLibrary.code  Triple+Basics.code  URL.code  Version+Extensions.code  WritableByteStream+Extensions.code
Sources/BinarySymbols/: CMakeLists.txt  ClangHostDefaultObjectsDetector.code  LLVMObjdumpSymbolProvider.code  ReferencedSymbols.code  SymbolProvider.code
Sources/CodiraBuildSupport/: BuildSystem.code  CMakeLists.txt  CodiraBuildSystem.code  DotPIFSerializer.code  PIF.code  PIFBuilder.code  PackagePIFBuilder+Helpers.code  PackagePIFBuilder+Plugins.code  PackagePIFBuilder.code  PackagePIFProjectBuilder+Modules.code  PackagePIFProjectBuilder+Products.code  PackagePIFProjectBuilder.code  README.md
Sources/CodiraFixIt/: CMakeLists.txt  CodiraFixIt.code
Sources/CodiraSDKCommand/: CMakeLists.txt  CodiraSDKCommand.code  CodiraSDKSubcommand.code  ConfigureCodiraSDK.code  InstallCodiraSDK.code  ListCodiraSDKs.code  README.md  RemoveCodiraSDK.code
Sources/Commands/: CMakeLists.txt  CodiraBuildCommand.code  CodiraRunCommand.code  CodiraTestCommand.code  CommandWorkspaceDelegate.code
Sources/CompilerPluginSupport/: CMakeLists.txt  TargetExtensions.code
Sources/CoreCommands/: BuildSystemSupport.code  CMakeLists.txt  CodiraCommandObservabilityHandler.code  CodiraCommandState.code  Options.code
Sources/DriverSupport/: CMakeLists.txt  DriverSupportUtils.code  SPMCodiraDriverExecutor.code
Sources/LLBuildManifest/: CMakeLists.txt  Command.code  LLBuildManifest.code  LLBuildManifestWriter.code  Node.code  Target.code  Tools.code
Sources/PackageCollections/: API.code  CMakeLists.txt  PackageCollections+CertificatePolicy.code  PackageCollections+Configuration.code  PackageCollections+Storage.code  PackageCollections+Validation.code  PackageCollections.code  PackageIndex+Configuration.code  PackageIndex.code  PackageIndexAndCollections.code  Utility.code
Sources/PackageCollectionsCommand/: PackageCollectionsCommand.code
Sources/PackageCollectionsModel/: CMakeLists.txt  PackageCollectionModel+v1.code  PackageCollectionModel.code
Sources/PackageCollectionsSigning/: CMakeLists.txt  CertificatePolicy.code  PackageCollectionSigning.code  X509Extensions.code
Sources/PackageDescription/: BuildSettings.code  CMakeLists.txt  Context.code  ContextModel.code  LanguageStandardSettings.code  PackageDependency.code  PackageDependencyTrait.code  PackageDescription.code  PackageDescriptionSerialization.code  PackageDescriptionSerializationConversion.code  PackageRequirement.code  Product.code  Resource.code  SupportedPlatforms.code  Target.code  Trait.code  Version+StringLiteralConvertible.code  Version.code  WarningLevel.code
Sources/PackageFingerprint/: CMakeLists.txt  FilePackageFingerprintStorage.code  Model.code  PackageFingerprintStorage.code
Sources/PackageGraph/: BoundVersion.code  CMakeLists.txt  DependencyMirrors.code  Diagnostics.code  GraphLoadingNode.code  ModuleAliasTracker.code  ModulesGraph+Loading.code  ModulesGraph.code  PackageContainer.code  PackageGraphRoot.code  PackageModel+Extensions.code  PackageRequirement.code  ResolvedPackagesStore.code  Version+Extensions.code  VersionSetSpecifier.code
Sources/PackageLoading/: CMakeLists.txt  ContextModel.code  Diagnostics.code  ManifestJSONParser.code  ManifestLoader+Validation.code  ManifestLoader.code  ManifestSignatureParser.code  ModuleMapGenerator.code  PackageBuilder.code  PackageDescriptionSerialization.code  PkgConfig.code  Platform.code  README.md  RegistryReleaseMetadataSerialization.code  Target+PkgConfig.code  TargetSourcesBuilder.code  ToolsVersionParser.code
Sources/PackageManagerDocs/: EmptyFile.code  README.md
Sources/PackageMetadata/: PackageMetadata.code
Sources/PackageModel/: ArtifactsArchiveMetadata.code  BuildConfiguration.code  BuildEnvironment.code  BuildFlags.code  BuildSettings.code  CMakeLists.txt  CodiraLanguageVersion.code  DependencyMapper.code  Diagnostics.code  EnabledTraitsMap.code  IdentityResolver.code  InstalledCodiraPMConfiguration.code  ManifestSourceGeneration.code  MinimumDeploymentTarget.code  ModuleMapType.code  PackageIdentity.code  PackageModel.code  PackageReference.code  Platform.code  PlatformRegistry.code  Product.code  Registry.code  RegistryReleaseMetadata.code  Resource.code  Sanitizers.code  Sources.code  SupportedLanguageExtension.code  Toolchain+SupportedFeatures.code  Toolchain.code  ToolchainConfiguration.code  ToolsVersion.code  ToolsVersionSpecificationGeneration.code  Toolset.code  UserToolchain.code  WindowsToolchainInfo.code
Sources/PackageModelSyntax/: AddCodiraSetting.code  AddPackageDependency.code  AddProduct.code  AddTarget.code  AddTargetDependency.code  CMakeLists.txt  ManifestEditError.code  ManifestSyntaxRepresentable.code  PackageDependency+Syntax.code  PackageEditResult.code  ProductDescription+Syntax.code  SyntaxEditUtils.code  TargetDescription+Syntax.code
Sources/PackagePlugin/: ArgumentExtractor.code  CMakeLists.txt  Command.code  Context.code  Diagnostics.code  Errors.code  PackageManagerProxy.code  PackageModel.code  Path.code  Plugin.code  PluginContextDeserializer.code  PluginMessages.code  Protocols.code  Utilities.code
Sources/PackageRegistry/: CMakeLists.txt  ChecksumTOFU.code  RegistryClient.code  RegistryConfiguration.code  RegistryDownloadsManager.code  SignatureValidation.code  SigningEntityTOFU.code
Sources/PackageRegistryCommand/: CMakeLists.txt  PackageRegistryCommand+Auth.code  PackageRegistryCommand+Publish.code  PackageRegistryCommand.code
Sources/SPMSQLite3/: sqlite.h  (+2 more)
(+1099 files in other folders)
